# django-template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.sample  pyproject.toml  setup.cfg
core/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
home/: urls.py  views.py
home/constants/: profile_constants.py
home/fixtures/: users.json
home/forms/: onboarding_forms.py
home/management/commands/: create_users.py
home/templates/: profile.html
home/templates/includes/: custom-footer.html
home/tests/models/: agraph_models_tests.py
home/views/: profile_views.py
nginx/: myapp.conf  nasa-app.conf  ruben-project.conf
volt/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
volt/forms/: admin_forms.py  login_form.py  registration_forms.py  user_password_change_form.py  user_password_reset_form.py  user_password_set_form.py
volt/migrations/: 0001_initial.py
volt/static/: gulpfile.js
volt/static/css/: volt.css
volt/templates/accounts/: forgot-password.html  lock.html  password-change-done.html  password-change.html  password-reset-complete.html  password-reset-done.html  reset-password.html  sign-in.html  sign-up.html
volt/templates/admin/: change_list_results.html  generate_invite_codes.html  invite_codes_generated.html  login.html  pagination.html
volt/templates/errors/: 404.html  500.html
volt/templatetags/: volt.py
volt/tests/: admin_tests.py
volt/views/: admin_views.py  authentication_views.py  error_views.py  page_views.py  registration_views.py
(+24 files in other folders)
