[tool.poetry]
name = "ruben-project"
version = "0.1.0"
description = ""
authors = ["Ruben <ruromgar@gmail.com>"]
readme = "README.md"
packages = [{include = "ruben_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.1.12"
python-dotenv = "1.0.0"
whitenoise = "6.5.0"
gunicorn = "21.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
