[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["Ruben <ruromgar@gmail.com>"]
readme = "README.md"
packages = [{include = "myapp"}]

[tool.poetry.dependencies]
python = "3.12.5"
django = "4.1.12"
python-dotenv = "1.0.0"
whitenoise = "6.5.0"
gunicorn = "21.2.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"
django-formtools = "2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
